new broker setup

--- a/config/mosquitto.conf
+++ b/config/mosquitto.conf
@@ -1,6 +1,11 @@
-listener 1883
 persistence true
 persistence_location /mosquitto/data/
+
+log_type all
 log_dest file /mosquitto/log/mosquitto.log
-allow_anonymous false
+
+listener 1883
+
 password_file /mosquitto/config/passwd
+
+allow_anonymous false
