--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,59 +1,33 @@
 version: '3.8'
 
 networks:
-  mqtt-net:
+  mqtt_network:
     driver: bridge
     ipam:
       config:
         - subnet: 172.100.10.0/24
 
 services:
-  mqtt-broker:
-    image: broker:latest
-    user: mosquitto
+  mqtt_broker:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: mqtt_broker
+
+    networks:
+      mqtt_network:
+        ipv4_address: 172.100.10.10
+
     volumes:
-      - type: bind
-        source: ./config/
-        target: /mosquitto/config/
-        read_only: false
-      - type: bind
-        source: ./log/
-        target: /mosquitto/log/
-        read_only: false
-      - type: volume
-        source: data
-        target: /mosquitto/data/
+      - ./config:/mosquitto/config
+      - ./log:/mosquitto/log
+      - mosquitto_data:/mosquitto/data
+
     ports:
       - target: 1883
         published: 1883
         protocol: tcp
         mode: host
-      - target: 9001
-        published: 9001
-        protocol: tcp
-        mode: host
-    networks:
-      mqtt-net:
-        ipv4_address: 172.100.10.10
-    
-  mqtt-pub:
-    image: eclipse-mosquitto:latest
-    command: sh -c "mosquitto_pub -h mqtt-broker -t test -m 'Hello World' -u admin -P password"
-    depends_on:
-      - mqtt-broker
-    networks:
-      mqtt-net:
-        ipv4_address: 172.100.10.11
-  
-  mqtt-sub:
-    image: eclipse-mosquitto:latest
-    command: sh -c "mosquitto_sub -h mqtt-broker -t test -u admin -P password"
-    depends_on:
-      - mqtt-broker
-    networks:
-      mqtt-net:
-        ipv4_address: 172.100.10.12
-  
+
 volumes:
-  data:
-    name: "mqtt-broker-data"
+  mosquitto_data:
